# docs/swagger.json
@@ -491,7 +491,7 @@
                 }
             },
             "put": {
-                "description": "Update a category",
+                "description": "Update a category\n### Особенности обновления характеристик:\n**Важно:** При обновлении категории поле `Characteristics` работает по принципу полной замены.\n1. **Добавление новых характеристик:**\nУкажите все существующие характеристики + новые\n2. **Удаление характеристик:**\nУкажите только те характеристики, которые должны остаться\n3. **Изменение характеристик:**\nУкажите обновленный список всех характеристик",
                 "consumes": [
                     "application/json"
                 ],
@@ -1010,6 +1010,12 @@
         "product_dto.CategoryResponse": {
             "type": "object",
             "properties": {
+                "characteristics": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/product_dto.CharacteristicResponse"
+                    }
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1030,6 +1036,29 @@
                 }
             }
         },
+        "product_dto.CharacteristicResponse": {
+            "type": "object",
+            "properties": {
+                "data_type": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "is_required": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "unit": {
+                    "type": "string"
+                }
+            }
+        },
         "product_dto.CreateCategoryRequest": {
             "type": "object",
             "required": [
@@ -1037,6 +1066,12 @@
                 "name"
             ],
             "properties": {
+                "characteristics": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/product_dto.CreateCharacteristicRequest"
+                    }
+                },
                 "images": {
                     "type": "array",
                     "minItems": 1,
@@ -1045,6 +1080,36 @@
                     }
                 },
                 "name": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 1
+                }
+            }
+        },
+        "product_dto.CreateCharacteristicRequest": {
+            "type": "object",
+            "required": [
+                "data_type",
+                "name"
+            ],
+            "properties": {
+                "data_type": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 1
+                },
+                "is_required": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 1
+                },
+                "unit": {
                     "type": "string",
                     "maxLength": 255,
                     "minLength": 1
@@ -1068,6 +1133,17 @@
         "product_dto.UpdateCategoryRequest": {
             "type": "object",
             "properties": {
+                "characteristics": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/product_dto.CreateCharacteristicRequest"
+                    }
+                },
+                "id": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 1
+                },
                 "images": {
                     "type": "array",
                     "items": {
